--- a/daemon/supervisord/supervisord.conf
+++ b/daemon/supervisord/supervisord.conf
@@ -14,7 +14,7 @@ minfds=1024
 minprocs=200
 
 [supervisorctl]
-serverurl=unix:///show/monitorshow/tmp/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
