--- a/daemon/supervisord/supervisord.conf
+++ b/daemon/supervisord/supervisord.conf
@@ -32,7 +32,7 @@ stdout_logfile=/show/monitorshow/log/autorelease_stdout.log
 
 [program:configCenterClient]
 directory=/usr/bin
-command=/usr/bin/php /show/monitorshow/configCenter/client.php
+command=php /show/monitorshow/configCenter/client.php
 autostart=true
 auto restart=false
 stderr_logfile=/show/monitorshow/log/configCenterClient_stderr.log
